# applications

applications/thread_application/: game.out
applications/thread_application/include/: orc.h  timer.h
applications/thread_application/src/: hero.cpp  timer.cpp
assignment/address-book/: address_book.cpp  address_book.hpp  build.sh  entry.hpp  main.cpp  printer.hpp
assignment/autonomous-vehicle/: a.out  autonomous_vehicl_task.txt  run.sh
assignment/autonomous-vehicle/include/: autonomous_vehicle.hpp  vehicle.hpp  vehicle_factory.hpp
assignment/autonomous-vehicle/src/: autonomous_vehicle.cpp  main.cpp  vehicle_factory.cpp
assignment/small-game/: README.txt  start.sh
assignment/small-game/include/: dragon.h  hero.h  iplayer.h
assignment/small-game/src/: dragon.cpp  orc.cpp  player.cpp
assignment/two-sum/: a.out  main.cpp
c++/array/: a.out  array.cpp  array.h  main.cpp
c++/lambda/: a.out  lambda.cpp
c++/move_semantics/: a.out  lvalue_rvalue.cpp  move_semantics.cpp
c++/multithreading/: thread1.cpp  thread2.cpp  thread_with_lambda.cpp
c++/smart_pointers/: a.out  sample.cpp
c++/smart_pointers/shared_pointer/: a.out  main.cpp  shared_pointer.hpp
c++/smart_pointers/unique_pointer/: a.out  main.cpp  str.cpp  unique_pointer.hpp
c++/string/: CMakeCache.txt  CMakeLists.txt  a.out  main.cpp  string.cpp  string.h  unittest.cpp
c++/template/: a.out  main.cpp  queue.cpp  queue.h
c++/thread_pool/: a.out  function_pool.cpp  function_pool.h  main.cpp
googletest-master/googletest/: CMakeCache.txt
